--- a/index.html
+++ b/index.html
@@ -1,12 +1,83 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Site d'Histoires</title>
+    <title>Stories Site - Histoires courtes</title>
+
+    <!-- Style simple pour un début propre -->
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background: #f7f7f7;
+            color: #333;
+            text-align: center;
+        }
+
+        header {
+            background: #4A4AEE;
+            color: white;
+            padding: 20px 0;
+        }
+
+        h1 {
+            margin: 0;
+            font-size: 2.3rem;
+        }
+
+        p {
+            font-size: 1.2rem;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 40px auto;
+            background: white;
+            padding: 25px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        footer {
+            margin-top: 50px;
+            padding: 20px;
+            background: #ddd;
+        }
+    </style>
+
+    <!-- 🔥 Google Analytics (à activer après création du compte GA4) -->
+    <!-- Remplace G-XXXXXXX par ton code de mesure Analytics -->
+    <!--
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){ dataLayer.push(arguments); }
+      gtag("js", new Date());
+      gtag("config", "G-XXXXXXX");
+    </script>
+    -->
 </head>
+
 <body>
-    <h1>Bienvenue sur mon site d'histoires !</h1>
-    <p>Le vrai design arrive bientôt.</p>
+
+    <header>
+        <h1>Bienvenue sur Stories Site 📚</h1>
+        <p>Des histoires courtes, simples et captivantes.</p>
+    </header>
+
+    <div class="container">
+        <h2>Le vrai design arrive bientôt…</h2>
+        <p>Mais tu peux déjà consulter le site et suivre son évolution !</p>
+
+        <p style="font-style: italic; color: #777;">La mise en place de Google AdSense sera prochainement active.</p>
+    </div>
+
+    <footer>
+        © 2025 Stories Site — Tous droits réservés.
+    </footer>
+
 </body>
 </html>
