--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
       © 2025 Stories Site
     </div>
     <div class="links">
-      <a href="/a-propos.html">À propos</a>
-      <a href="/contact.html">Contact</a>
-      <a href="/privacy.html">Politique confidentialité</a>
+      <a href="a-propos.html">À propos</a>
+      <a href="contact.html">Contact</a>
+      <a href="politique.html">Politique confidentialité</a>
     </div>
   </footer>
 
