--- a/a-propos.html
+++ b/a-propos.html
@@ -1,39 +1,59 @@
-<!-- a-propos.html -->
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>À propos</title>
-<link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>À propos — Stories Site</title>
+  <meta name="description" content="À propos de Stories Site, un site dédié aux histoires et séries originales pour s'évader.">
+  <style>
+    body{
+      margin:0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;
+      background:#0b0b0c;
+      color:#eaeaea;
+      line-height:1.6;
+      padding:20px;
+    }
+    .container{
+      max-width:900px;
+      margin:auto;
+      background:#111214;
+      padding:24px;
+      border-radius:12px;
+    }
+    h1{color:#caa45b}
+    a{color:#caa45b;text-decoration:none}
+  </style>
 </head>
 <body>
-<header class="simple-header">
-<a href="index.html" class="back-home">Retour</a>
-<h1>À propos</h1>
-</header>
 
+  <div class="container">
+    <h1>À propos de Stories Site</h1>
 
-<main class="page-container">
-<section>
-<h2>Notre univers</h2>
-<p>
-Ce site est dédié à la création d’histoires originales pour celles et ceux qui aiment se perdre dans des mondes imaginaires. Chaque texte est écrit pour offrir un moment suspendu.
-</p>
-</section>
+    <p>
+      <strong>Stories Site</strong> est un site indépendant dédié à la création et au partage
+      d’histoires courtes, de récits narratifs et de séries originales.
+    </p>
 
+    <p>
+      L’objectif est simple : proposer des textes immersifs, accessibles à tous,
+      pour s’évader, rêver, frissonner ou réfléchir, le temps d’une lecture.
+    </p>
 
-<section>
-<h2>Pourquoi ce site</h2>
-<p>
-L’objectif est simple: proposer des récits, courts ou longs, accessibles depuis n’importe où, à lire en solo ou à partager.
-</p>
-</section>
-</main>
+    <p>
+      Le site est mis à jour régulièrement avec de nouveaux contenus,
+      écrits et publiés de manière progressive.
+    </p>
 
+    <p>
+      Stories Site est un projet personnel, sans inscription obligatoire,
+      ouvert à tous les lecteurs.
+    </p>
 
-<footer class="simple-footer">
-<p>© Stories-site. Tous droits réservés.</p>
-</footer>
+    <p>
+      <a href="index.html">← Retour à l’accueil</a>
+    </p>
+  </div>
+
 </body>
 </html>
