--- a/contact.html
+++ b/contact.html
@@ -1,34 +1,53 @@
-<!-- contact.html -->
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Contact</title>
-<link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Contact — Stories Site</title>
+  <meta name="description" content="Contactez Stories Site pour toute question ou demande.">
+  <style>
+    body{
+      margin:0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;
+      background:#0b0b0c;
+      color:#eaeaea;
+      line-height:1.6;
+      padding:20px;
+    }
+    .container{
+      max-width:900px;
+      margin:auto;
+      background:#111214;
+      padding:24px;
+      border-radius:12px;
+    }
+    h1{color:#caa45b}
+    a{color:#caa45b;text-decoration:none}
+  </style>
 </head>
 <body>
-<header class="simple-header">
-<a href="index.html" class="back-home">Retour</a>
-<h1>Contact</h1>
-</header>
 
+  <div class="container">
+    <h1>Contact</h1>
 
-<main class="page-container">
-<section>
-<h2>Pour me contacter</h2>
-<p>Adresse mail officielle du site:</p>
-<p class="contact-mail">stories.site16@gmail.com</p>
+    <p>
+      Pour toute question, suggestion, problème technique ou demande liée au site,
+      vous pouvez nous contacter par email.
+    </p>
 
+    <p>
+      📧 <strong>Email :</strong><br>
+      <a href="mailto:stories.site16@gmail.com">stories.site16@gmail.com</a>
+    </p>
 
-<p>Instagram:</p>
-<p class="contact-ig">bientôt disponible</p>
-</section>
-</main>
+    <p>
+      Nous essayons de répondre dans les meilleurs délais.
+    </p>
 
+    <p>
+      <a href="index.html">← Retour à l’accueil</a>
+    </p>
+  </div>
 
-<footer class="simple-footer">
-<p>© Stories-site. Tous droits réservés.</p>
-</footer>
 </body>
 </html>
