--- a/politique.html
+++ b/politique.html
@@ -1,47 +1,88 @@
-<!-- politique.html -->
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Politique de Confidentialité</title>
-<link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Politique de confidentialité — Stories Site</title>
+  <meta name="description" content="Politique de confidentialité et gestion des cookies du site Stories Site.">
+  <style>
+    body{
+      margin:0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;
+      background:#0b0b0c;
+      color:#eaeaea;
+      line-height:1.6;
+      padding:20px;
+    }
+    .container{
+      max-width:900px;
+      margin:auto;
+      background:#111214;
+      padding:24px;
+      border-radius:12px;
+    }
+    h1,h2{color:#caa45b}
+    a{color:#caa45b;text-decoration:none}
+  </style>
 </head>
 <body>
-<header class="simple-header">
-<a href="index.html" class="back-home">Retour</a>
-<h1>Politique de Confidentialité</h1>
-</header>
 
+  <div class="container">
+    <h1>Politique de confidentialité</h1>
 
-<main class="page-container">
-<section>
-<h2>Données collectées</h2>
-<p>
-Ce site peut collecter des données anonymes liées à la navigation afin d'améliorer l’expérience utilisateur. Aucune donnée personnelle sensible n’est enregistrée.
-</p>
-</section>
+    <p>
+      Cette politique de confidentialité décrit la manière dont <strong>Stories Site</strong>
+      collecte et utilise les données des utilisateurs.
+    </p>
 
+    <h2>Données collectées</h2>
+    <p>
+      Stories Site ne collecte aucune donnée personnelle identifiable sans le consentement
+      explicite de l’utilisateur.
+    </p>
 
-<section>
-<h2>Abonnements</h2>
-<p>
-Les adresses mail enregistrées pour l’abonnement ne sont pas partagées et restent stockées uniquement dans votre navigateur.
-</p>
-</section>
+    <p>
+      Certaines données anonymes peuvent être collectées à des fins statistiques
+      (par exemple via Google Analytics), comme :
+    </p>
 
+    <ul>
+      <li>pages visitées</li>
+      <li>temps passé sur le site</li>
+      <li>type d’appareil et navigateur</li>
+    </ul>
 
-<section>
-<h2>Cookies</h2>
-<p>
-Ce site utilise des cookies nécessaires et peut utiliser des cookies d’analyse si l’utilisateur l’accepte. Vous pouvez gérer votre choix à tout moment.
-</p>
-</section>
-</main>
+    <h2>Cookies</h2>
+    <p>
+      Le site utilise des cookies pour améliorer l’expérience utilisateur et,
+      le cas échéant, afficher des publicités via Google AdSense.
+    </p>
 
+    <p>
+      Vous pouvez accepter ou refuser les cookies via le bandeau de consentement
+      affiché lors de votre première visite.
+    </p>
 
-<footer class="simple-footer">
-<p>© Stories-site. Tous droits réservés.</p>
-</footer>
+    <h2>Publicités Google AdSense</h2>
+    <p>
+      Google peut utiliser des cookies pour diffuser des annonces adaptées aux utilisateurs.
+      Vous pouvez consulter la politique de Google ici :
+      <a href="https://policies.google.com/privacy" target="_blank" rel="noopener">
+        https://policies.google.com/privacy
+      </a>
+    </p>
+
+    <h2>Contact</h2>
+    <p>
+      Pour toute question concernant cette politique de confidentialité :
+      <br>
+      <a href="mailto:stories.site16@gmail.com">stories.site16@gmail.com</a>
+    </p>
+
+    <p>
+      <a href="index.html">← Retour à l’accueil</a>
+    </p>
+  </div>
+
 </body>
 </html>
